# fft-bench

./: .gitignore  CMakeLists.txt  bench_macos_m1.json  bench_supercloud.json  bench_supercloud_old.json  pyproject.toml  setup.cfg  setup.py  visualize.ipynb  visualize_cuda.ipynb
cmake/: QueryPythonForPybind11.cmake
fft_bench/: __main__.py  main.cpp  main.py
src/: accel.cpp  benchmark.hpp  cuda.cpp
