[project]
name = "fft_bench"
version = "0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20"
]

[project.optional-dependencies]
test = ["pytest>=6.2.4"]

[project.scripts]
fft-bench = "fft_bench.main:main"

[build-system]
requires = [
    "setuptools>=51.0",
    "wheel",
    "pybind11~=2.6.1",
]
build-backend = "setuptools.build_meta"
