[project]
name = "fft_bench"
description = ""
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "threadpoolctl~=3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=6.2.4"]

[project.scripts]
fft-bench = "fft_bench.main:main"

[build-system]
requires = ["pybind11~=2.6.1", "py-build-cmake~=0.1.2"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
directory = "."

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src/*.cpp", "src/*.hpp", "src/*.cu", "cmake/*.cmake"]

[tool.py-build-cmake.cmake]
minimum_version = "3.18"  # Required for CUDA improvements
build_type = "RelWithDebInfo"
source_path = "."
build_args = ["-j"]
install_components = ["python_modules"]

[tool.py-build-cmake.stubgen]
