#[metadata]
#name = fft_bench
#version = 0.1
#author = Colin Gilgenbach
#author_emal = hexane@mit.edu
#url = https://github.com/hexane360/fft-bench
#description = ""
#long_description = ""

#[options]
#python_requires = >=3.9
#packages = find:
#install_requires =
#    numpy>=1.20

#[options.extras_require]
#test = pytest>=6.2.4

#[options.entry_points]
#console_scripts =
#    fft-bench = fft_bench.main:main

[flake8]
ignore = W191,E101,E117,E741 #,E262,E265,E226,N802,N803,N806,N815,N816,N817
max-line-length = 99

[mypy]
python_version = 3.9
ignore_missing_imports = True
check_untyped_defs = True
allow_redefinition = True
